@@ -587,7 +587,7 @@ function __autoload($class_name){
 			clear_messages();
 			$status['zabbix_server'] = S_NO;
 		}
-		else {
+		else{
 			$status['zabbix_server'] = S_YES;
 		}
 // triggers
